--- a/podman-compose-dev.yml
+++ b/podman-compose-dev.yml
@@ -11,8 +11,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      migrate:
-        condition: service_started
 
 
   frontend:
@@ -30,24 +28,24 @@ services:
 
   db:
     image: postgres:16
+    volumes:
+        - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-    volumes:
-        - postgres_data:/var/lib/postgresql/data
+      - POSTGRES_DB=${DEV_POSTGRES_DB}
+      - POSTGRES_PORT=${DEV_POSTGRES_PORT}
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${DEV_POSTGRES_PORT}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${DEV_POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   migrate: 
     image: migrate/migrate:latest
-    command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable", "up"]
+    command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${DEV_POSTGRES_DB}?sslmode=disable", "up"]
     volumes: 
         ./migrations:/migrations
     depends_on:
