--- a/podman-compose-prod.yml
+++ b/podman-compose-prod.yml
@@ -7,8 +7,9 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      migrate:
-        condition: service_started
+      db:
+        condition: service_healthy
+
 
 
   frontend:
@@ -26,21 +27,21 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_DB=${PROD_POSTGRES_DB}
+      - POSTGRES_PORT=${PROD_POSTGRES_PORT}
     volumes:
-        - postgres_data:/var/lib/postgresql/data
+        - postgres_data_prod:/var/lib/postgresql/data
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${PROD_POSTGRES_PORT}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${PROD_POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   migrate: 
     image: migrate/migrate:latest
-    command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable", "up"]
+    command: ["-path", "/migrations", "-database", "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${PROD_POSTGRES_DB}?sslmode=disable", "up"]
     volumes: 
         ./migrations:/migrations
     depends_on:
@@ -48,5 +49,5 @@ services:
         condition: service_healthy
     
 volumes:
-    postgres_data:
+    postgres_data_prod:
 
